# proofheir

./: .dockerignore  .env  .env.example  .gitignore  CONFIG.md  Cargo.toml  DEV_GUIDE.md  README.md  dev.sh  nx.json  package.json  pnpm-lock.yaml  railway.toml  render.yaml
.Jules/: palette.md
apps/api/: .env  .env.example  Cargo.toml  Dockerfile  README.md  railway.toml
apps/api/src/: main.rs  proof.rs
apps/web/: .env.example  next.config.js  project.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: global.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/api/check-status/: route.ts
apps/web/src/app/api/delegate/: route.ts
apps/web/src/app/api/faucet/: route.ts
apps/web/src/app/api/generate-proof/: route.ts
apps/web/src/app/api/inheritance/: route.ts
apps/web/src/app/api/toggle-status/: route.ts
apps/web/src/components/: ClaimCard.tsx  ClaimSuccess.tsx  DelegationCard.tsx  DevFaucet.tsx  TokenSelector.tsx  WalletConnect.tsx
apps/web/src/components/ui/: Stepper.tsx  Tabs.tsx
apps/web/src/config/: contracts.ts  wagmi.ts
apps/web/src/hooks/: useTokenBalances.ts
apps/web/src/lib/: utils.ts
docs/: TECHNICAL_FINDINGS.md
scripts/: deploy.sh
